--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-auto-complete",
+  "name": "@erhimanshugarg/angular-auto-complete",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
